--- a/app/src/main/res/layout/list_placeholder.xml
+++ b/app/src/main/res/layout/list_placeholder.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <!-- Need to keep ImageView separate because adding the drawable as a compound drawable
          to TextView causes a crash on Android <5.0 (because it's a vector drawable) -->
@@ -11,7 +11,7 @@
     <ImageView
         android:contentDescription="@string/list_empty"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/ic_train"/>
 
