--- a/app/src/main/res/layout/list_placeholder.xml
+++ b/app/src/main/res/layout/list_placeholder.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="UseCompoundDrawables">
 
     <!-- Need to keep ImageView separate because adding the drawable as a compound drawable
          to TextView causes a crash on Android <5.0 (because it's a vector drawable) -->
